--- a/image_segmentation_greenhouses.ipynb
+++ b/image_segmentation_greenhouses.ipynb
@@ -14,6 +14,17 @@
     {
       "attachments": {},
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Code for Image segmentation task for Practical Machine Learning\n",
+        "#### Inês Silveira nr. 22062\n",
+        "#### Joana Esteves nr. 24914\n",
+        "#### Vasco Florentino nr. 23411"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
       "metadata": {
         "id": "ZDKaLMHl0HY9"
       },
