--- a/PML_code_img_segmentation.ipynb
+++ b/PML_code_img_segmentation.ipynb
@@ -128,7 +128,7 @@
         "    os.makedirs(folder_name)\n",
         "\n",
         "# Open the input raster file\n",
-        "with rasterio.open('/content/drive/MyDrive/AAA/mask_reclass.tif') as src: #adjust to your own path\n",
+        "with rasterio.open('/content/drive/MyDrive/AAA/mask_reclass.tif') as src: \n",
         "\n",
         "    # Calculate the height and width of the sub-rasters\n",
         "    height = src.height // 20  # Divide the raster into 4 rows\n",
@@ -195,7 +195,7 @@
         "\n",
         "# Multi bandas\n",
         "# Open the input raster file\n",
-        "with rasterio.open(r'/content/drive/MyDrive/AAA/3bands_clipped_tif.tif') as src: #adjust to your own path\n",
+        "with rasterio.open(r'/content/drive/MyDrive/AAA/3bands_clipped_tif.tif') as src: \n",
         "\n",
         "    # Calculate the height and width of the sub-rasters\n",
         "    nHeight=20\n",
@@ -262,7 +262,7 @@
       "outputs": [],
       "source": [
         "# Define paths\n",
-        "path = Path('/content/drive/MyDrive/AAA') #ADJUST TO YOUR OWN PATH\n",
+        "path = Path('/content/drive/MyDrive/AAA') \n",
         "image_folder = path/'images'\n",
         "mask_folder = path/'labels1'\n",
         "\n",
