--- a/PML_code_img_segmentation.ipynb
+++ b/PML_code_img_segmentation.ipynb
@@ -500,6 +500,7 @@
         "learn = unet_learner(dls, resnet34)\n",
         "\n",
         "# Train the model\n",
+        "# In the following line of code, adjust the number of epochs to see different results\n",
         "learn.fine_tune(2)\n",
         "\n",
         "# Perform inference on test images\n",
