ready to deliver

--- a/PML_code_img_segmentation.ipynb
+++ b/PML_code_img_segmentation.ipynb
@@ -25,82 +25,52 @@
     {
       "attachments": {},
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## First of all, download the files **mask_reclass.tif** and **3bands_clipped_tif.tif**, from the Data_In folder, to path /content/drive/MyDrive/AAA/ in Google Colab."
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Imports"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')\n",
+        "\n",
+        "!pip install rasterio\n",
+        "\n",
+        "import rasterio\n",
+        "from rasterio.windows import Window\n",
+        "import os\n",
+        "import shutil\n",
+        "import numpy as np\n",
+        "from PIL import Image\n",
+        "\n",
+        "from fastai.vision.all import *\n",
+        "from sklearn.metrics import confusion_matrix\n",
+        "\n",
+        "from sklearn.metrics import classification_report\n",
+        "from sklearn.metrics import roc_auc_score\n"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
       "metadata": {
         "id": "ZDKaLMHl0HY9"
       },
       "source": [
         "## RASTERIO"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "71VhQKZu0KUv",
-        "outputId": "4fc2f26b-d3aa-4259-ed01-4be25e1ee6e6"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Collecting rasterio\n",
-            "  Downloading rasterio-1.3.7-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (21.3 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m21.3/21.3 MB\u001b[0m \u001b[31m63.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hCollecting affine (from rasterio)\n",
-            "  Downloading affine-2.4.0-py3-none-any.whl (15 kB)\n",
-            "Requirement already satisfied: attrs in /usr/local/lib/python3.10/dist-packages (from rasterio) (23.1.0)\n",
-            "Requirement already satisfied: certifi in /usr/local/lib/python3.10/dist-packages (from rasterio) (2022.12.7)\n",
-            "Requirement already satisfied: click>=4.0 in /usr/local/lib/python3.10/dist-packages (from rasterio) (8.1.3)\n",
-            "Collecting cligj>=0.5 (from rasterio)\n",
-            "  Downloading cligj-0.7.2-py3-none-any.whl (7.1 kB)\n",
-            "Requirement already satisfied: numpy>=1.18 in /usr/local/lib/python3.10/dist-packages (from rasterio) (1.22.4)\n",
-            "Collecting snuggs>=1.4.1 (from rasterio)\n",
-            "  Downloading snuggs-1.4.7-py3-none-any.whl (5.4 kB)\n",
-            "Collecting click-plugins (from rasterio)\n",
-            "  Downloading click_plugins-1.1.1-py2.py3-none-any.whl (7.5 kB)\n",
-            "Requirement already satisfied: setuptools in /usr/local/lib/python3.10/dist-packages (from rasterio) (67.7.2)\n",
-            "Requirement already satisfied: pyparsing>=2.1.6 in /usr/local/lib/python3.10/dist-packages (from snuggs>=1.4.1->rasterio) (3.0.9)\n",
-            "Installing collected packages: snuggs, cligj, click-plugins, affine, rasterio\n",
-            "Successfully installed affine-2.4.0 click-plugins-1.1.1 cligj-0.7.2 rasterio-1.3.7 snuggs-1.4.7\n"
-          ]
-        }
-      ],
-      "source": [
-        "!pip install rasterio\n",
-        "import rasterio\n",
-        "from rasterio.windows import Window\n",
-        "import os\n",
-        "import numpy as np\n",
-        "from PIL import Image\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "zYBKBN58iRLe",
-        "outputId": "4266d8ab-d896-47f6-dd9a-da4438f961b1"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Mounted at /content/drive\n"
-          ]
-        }
-      ],
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
       ]
     },
     {
@@ -122,13 +92,19 @@
       },
       "outputs": [],
       "source": [
-        "# Create a folder named \"images\" if it doesn't exist\n",
+        "# Specify the directory path\n",
+        "directory = '/content/drive/MyDrive/AAA/'\n",
+        "\n",
+        "# Create a folder named \"labels1\" if it doesn't exist\n",
         "folder_name = \"labels1\"\n",
-        "if not os.path.exists(folder_name):\n",
-        "    os.makedirs(folder_name)\n",
+        "folder_path = os.path.join(directory, folder_name)\n",
+        "if os.path.exists(folder_path):\n",
+        "    shutil.rmtree(folder_path)  # Delete the folder and its contents\n",
+        "\n",
+        "os.makedirs(folder_path)  # Create the folder\n",
         "\n",
         "# Open the input raster file\n",
-        "with rasterio.open('/content/drive/MyDrive/AAA/mask_reclass.tif') as src: \n",
+        "with rasterio.open('/content/drive/MyDrive/AAA/mask_reclass.tif') as src:\n",
         "\n",
         "    # Calculate the height and width of the sub-rasters\n",
         "    height = src.height // 20  # Divide the raster into 4 rows\n",
@@ -156,9 +132,17 @@
         "            })\n",
         "\n",
         "            # Write the clipped data to a new raster file\n",
-        "            output_file = os.path.join(folder_name, f'image_{i}_{j}_mask1.png')\n",
+        "            # with rasterio.open(f'sub_raster_{i}_{j}.tif', 'w', **clipped_meta) as dst:\n",
+        "            output_file = os.path.join(directory,folder_name, f'image_{i}_{j}_mask1.png')\n",
         "            with rasterio.open(output_file, 'w', **clipped_meta) as dst:\n",
-        "                 dst.write(clipped_data)"
+        "                 dst.write(clipped_data)\n",
+        "\n",
+        "  # converts to 8 bits AFTER re-scaling bands\n",
+        "def s255(arr):\n",
+        "    arr_std = (arr - np.min(arr)) / (np.max(arr) - np.min(arr)) * 255\n",
+        "    # Convert the standardized array to integer values\n",
+        "    arr_std = arr_std.astype(np.uint8)\n",
+        "    return arr_std"
       ]
     },
     {
@@ -180,22 +164,20 @@
       },
       "outputs": [],
       "source": [
-        "# converts to 8 bits AFTER re-scaling bands\n",
-        "def s255(arr):\n",
-        "    arr_std = (arr - np.min(arr)) / (np.max(arr) - np.min(arr)) * 255\n",
-        "    # Convert the standardized array to integer values\n",
-        "    arr_std = arr_std.astype(np.uint8)\n",
-        "    return arr_std\n",
+        "# Specify the directory path\n",
+        "directory = '/content/drive/MyDrive/AAA/'\n",
         "\n",
-        "\n",
-        "# Create a folder named \"images\" if it doesn't exist\n",
+        "# Create a folder named \"images\" if it already doesn't exist\n",
         "folder_name = \"images\"\n",
-        "if not os.path.exists(folder_name):\n",
-        "    os.makedirs(folder_name)\n",
+        "folder_path = os.path.join(directory, folder_name)\n",
+        "if os.path.exists(folder_path):\n",
+        "    shutil.rmtree(folder_path)  # Delete the folder and its contents\n",
+        "\n",
+        "os.makedirs(folder_path)  # Create the folder\n",
         "\n",
         "# Multi bandas\n",
         "# Open the input raster file\n",
-        "with rasterio.open(r'/content/drive/MyDrive/AAA/3bands_clipped_tif.tif') as src: \n",
+        "with rasterio.open('/content/drive/MyDrive/AAA/3bands_clipped_tif.tif') as src:\n",
         "\n",
         "    # Calculate the height and width of the sub-rasters\n",
         "    nHeight=20\n",
@@ -211,7 +193,7 @@
         "            ymax = (i + 1) * height\n",
         "            xmin = j * width\n",
         "            xmax = (j + 1) * width\n",
-        "            #print(ymin, ymax,xmin, xmax)\n",
+        "\n",
         "            window = Window.from_slices((ymin, ymax), (xmin, xmax))\n",
         "\n",
         "            # Read the data within the window\n",
@@ -219,14 +201,15 @@
         "            clipped_data_2 = s255(src.read(2, window=window))\n",
         "            clipped_data_3 = s255(src.read(3, window=window))\n",
         "\n",
-        "            # Stack the bands to create an RGB image array\n",
         "            rgb_image = np.stack([clipped_data_1, clipped_data_2, clipped_data_3], axis=2)\n",
+        "\n",
         "\n",
         "            # Convert the image array to a PIL Image\n",
         "            image = Image.fromarray(rgb_image,mode='RGB')\n",
         "\n",
         "            # Save the PIL Image as a PNG file\n",
-        "            output_file = os.path.join(folder_name, f'image_{i}_{j}.png')\n",
+        "\n",
+        "            output_file = os.path.join(directory, folder_name, f'image_{i}_{j}.png')\n",
         "            image.save(output_file)"
       ]
     },
@@ -239,18 +222,6 @@
       "source": [
         "## IMAGE SEGMENTATION\n",
         "Uses images and labels created in the previous code, as well as a list of labels in the mask (greenhouse, not greenhouse)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "HzMFwzRE05U8"
-      },
-      "outputs": [],
-      "source": [
-        "from fastai.vision.all import *\n",
-        "from PIL import Image"
       ]
     },
     {
@@ -283,6 +254,14 @@
         "\n",
         "# Create DataLoaders\n",
         "dls = dblock.dataloaders(path, bs=8)"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Train the model"
       ]
     },
     {
@@ -518,6 +497,17 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Perform inference on test images\n",
+        "test_dl = dls.test_dl(get_image_files(image_folder))\n",
+        "preds = learn.get_preds(dl=test_dl)[0]"
+      ]
+    },
+    {
       "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
@@ -586,22 +576,22 @@
         }
       ],
       "source": [
-        "# Perform inference on test images\n",
-        "test_dl = dls.test_dl(get_image_files(image_folder))\n",
-        "preds = learn.get_preds(dl=test_dl)[0]\n",
         "\n",
         "# Display sample predictions\n",
         "sample_indices = [0, 1, 2, 3, 4]\n",
         "\n",
-        "fig, axes = plt.subplots(5, 2, figsize=(10, 20))\n",
+        "# Define the number of columns\n",
+        "fig, axes = plt.subplots(len(sample_indices), 2, figsize=(10, 20))\n",
+        "\n",
         "for i, idx in enumerate(sample_indices):\n",
         "    sample_image_path = list(test_dl.items)[idx]\n",
         "    sample_image = PILImage.create(sample_image_path)\n",
         "    sample_pred = preds[idx].argmax(dim=0).numpy()\n",
-        "\n",
+        "# image of satelite agregate\n",
         "    axes[i, 0].imshow(sample_image)\n",
         "    axes[i, 0].set_title('Image')\n",
         "    axes[i, 0].axis('off')\n",
+        "# image of predicted mask\n",
         "    axes[i, 1].imshow(sample_pred, cmap='tab20')\n",
         "    axes[i, 1].set_title('Predicted Mask')\n",
         "    axes[i, 1].axis('off')\n",
@@ -642,8 +632,6 @@
         }
       ],
       "source": [
-        "from sklearn.metrics import confusion_matrix\n",
-        "\n",
         "# Convert predicted and ground truth labels to 1D arrays\n",
         "pred_labels = sample_pred.flatten()\n",
         "true_labels = np.array(Image.open(get_mask_fn(sample_image_path))).flatten()\n",
@@ -710,7 +698,6 @@
       "source": [
         "# Compute confusion matrix\n",
         "\n",
-        "from sklearn.metrics import classification_report\n",
         "report = classification_report(true_labels, pred_labels)\n",
         "print(report)"
       ]
@@ -743,8 +730,6 @@
         }
       ],
       "source": [
-        "from sklearn.metrics import roc_auc_score\n",
-        "\n",
         "# Compute the AUC score\n",
         "auc_score = roc_auc_score(true_labels, pred_labels)\n",
         "print(\"AUC:\", auc_score)\n"
